--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
   text-align: center;
 }
 
+body {
+  min-height: 100%;
+}
+
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
