--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 :root {
   background-color: #fffcf1;
   text-align: center;
+  color: rgb(156, 154, 154);
+  display:flex;
+  justify-content: center;
+  align-items: center;
 }
 
 body {
